Añado fase de grupos. Comenzamos con la planificación de partidos mediante funciones (Plantilla home y local, añadir equipos locales y añadir equipos visitantes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,24 @@
     "version": "0.2.0",
     "configurations": [
     {
+        "name": "Match Function",
+        "program": "${workspaceFolder}/matchfunction.js",
+        "request": "launch",
+        "skipFiles": [
+            "<node_internals>/**"
+        ],
+        "type": "node"
+    },
+    {
+        "name": "Fase de grupos",
+        "program": "${workspaceFolder}/fasedegrupos.js",
+        "request": "launch",
+        "skipFiles": [
+            "<node_internals>/**"
+        ],
+        "type": "node"
+    },
+    {
         "name": "Teams",
         "program": "${workspaceFolder}/teams.js",
         "request": "launch",
