Reestructuro el repositorio añadiendo carpetas para funciones e imagenes y comienzo a redactar el readme.md

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
     {
         "name": "Match Function",
-        "program": "${workspaceFolder}/matchfunction.js",
+        "program": "${workspaceFolder}/functions/matchfunction.js",
         "request": "launch",
         "skipFiles": [
             "<node_internals>/**"
